--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    background: rgba(150, 150, 150, 0.9);
+    background: rgba(233, 233, 233);
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
     z-index: 1000;
 }
 
@@ -19,13 +20,32 @@ header {
 }
 
 .hero {
+    position: relative;
     height: 100vh;
-    background: linear-gradient(to bottom, #2b4f92, #f0f0f0);
     display: flex;
     align-items: center;
     justify-content: center;
     text-align: center;
     padding: 0 20px;
+    color: white;
+    overflow: hidden;
+
+    background: 
+      linear-gradient(to bottom, rgba(43, 79, 146, 0.6), rgba(233, 233, 233, 0.6)),
+      url('../img/hero-background.png') center center / cover no-repeat;
+}
+
+.hero::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+
+.hero > * {
+    position: relative;
+    z-index: 2;
 }
 
 .hero h1 {
@@ -38,9 +58,34 @@ header {
     margin-bottom: 2rem;
 }
 
+.hero-box {
+    background-color: rgba(43, 79, 146, 0.8);
+    padding: 8rem 5rem;
+    border-radius: 12px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.hero-box h1,
+.hero-box p {
+    color: #ffffff
+}
+
+.hero-btn {
+    color: white;
+    border: 2px solid white;
+    transition: all 0.3s ease;
+}
+
+.hero-btn:hover {
+    background-color: white;
+    color: #1e50b4;
+}
+
 .projects {
     padding: 60px 20px;
-    background-color: #f0f0f0;
+    background-color: #e9e9e9;
     color: #000000;
 }
 
@@ -73,13 +118,19 @@ footer {
 }
 
 .custom-navbar {
-    background: #f8f9fa;
-    position: sticky;
-    top: 0;
-    z-index: 999;
+  background-color: rgba(193, 193, 193, 0.6);
+  backdrop-filter: blur(10px);
+  transition: top 0.4s ease;
+  z-index: 999;
 }
 
-.search-box input:focus {
-    outline: none;
-    box-shadow: none;
+.navbar-nav .nav-link {
+  margin: 5px;
+}
+
+.navbar-toggler {
+  border: none;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba%2833,33,33,1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
 }
