--- a/css/main.css
+++ b/css/main.css
@@ -151,3 +151,122 @@ footer {
 .social-icon i:hover {
   color: rgb(43, 79, 146);
 }
+
+.login-card {
+  display: flex;
+  width: 800px;
+  height: 500px;
+  max-width: 100%;
+  background-color: #fff;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.login-left {
+  width: 50%;
+  height: auto;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-left img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center 30%;
+  display: block;
+}
+
+.login-right {
+  width: 50%;
+  padding: 40px 30px;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.login-right h2 {
+  font-weight: 450;
+  margin-bottom: 25px;
+  text-align: start;
+  color: #333;
+}
+
+.login-right input[type="text"],
+.login-right input[type="password"] {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  transition: border-color 0.3s ease;
+}
+
+.login-right input:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.login-right .remember {
+  display: flex;
+  justify-content: left;
+  margin-top: 15px;
+  margin-left: 2px;
+  font-size: 14px;
+}
+
+.login-right button[type="submit"] {
+  width: 100%;
+  background-color: #333;
+  color: white;
+  border: none;
+  padding: 12px;
+  border-radius: 6px;
+  margin-top: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.login-right button[type="submit"]:hover {
+  background-color: rgb(43, 79, 146);
+}
+
+.forgot-link {
+  text-align: right;
+  margin-top: 8px;
+}
+
+.forgot-link a {
+  font-size: 12px;
+  color: #333;
+  text-decoration: underline;
+  transition: color 0.2s;
+}
+
+.forgot-link a:hover {
+  color: rgb(43, 79, 146);
+}
+
+.login-register {
+    text-align: left;
+    margin-top:  25px;
+    font-size: 14px;
+}
+
+.login-register a {
+    color: #333;
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+.pages {
+    background: linear-gradient(to bottom, rgba(43, 79, 146, 1), rgba(233, 233, 233, 0.6));
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    padding-top: 100px;
+}
